fix nav icon to show in mobile

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
     <header>
         <a href="#" class="logo">DheyaYahya</a>
-
-        <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="#" >Services</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
+        <button id="navToggle" class="nav-btn">☰</button>
+    
+        <nav id="navMenu">
+            <a href="#" class="active">Home</a>
+            <a href="#">Services</a>
+            <a href="#">Skills</a>
+            <a href="#">Education</a>
+            <a href="#">Experience</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
+
     <section class="home">
         <div class="home-img">
             <img src="main.jpg" alt="">
@@ -38,5 +40,7 @@
             <a href="#" class="btn">Hire me</a>
         </div>
     </section>
+    <script src="script.js"></script>
+
 </body>
 </html>
