--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">DheyaYahya</a>
+        <a href="#" class="logo">DheyaQaderi</a>
         <button id="navToggle" class="nav-btn">☰</button>
     
         <nav id="navMenu">
