--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="main.png" alt="">
+            <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>DheyaY</span></h1>
