--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="https://t.me/dheya_alqaderi" class="btn">Hire me</a>
         </div>
     </section>
     <script src="script.js"></script>
