--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
         <div class="home-content">
             <h1>Hi, It's <span>Dheya</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p></p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <br>
+            <p>I’m passionate about technology because it’s where creativity and problem-solving come together to make a real impact. I
+            love the feeling of turning an idea into something functional, something that can make someone’s day easier or solve a
+            problem they didn’t know could be fixed. There’s a sense of excitement in watching complex systems come together,
+            knowing that behind every line of code is the potential to shape the future. For me, it’s not just about building
+            tech—it’s about the joy of creating something meaningful, something that can truly make a difference in the world.</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/DheyaAlqaderi/"><i class="fa-brands fa-github"></i></a>
