--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
             knowing that behind every line of code is the potential to shape the future. For me, it’s not just about building
             tech—it’s about the joy of creating something meaningful, something that can truly make a difference in the world.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/dheya-yahya-al-qaderi-ba5a3b260/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/DheyaAlqaderi/"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/DheyaAlqadrei"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/dheyaalqaderi/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://t.me/dheya_alqaderi"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://wa.me/+967771158212"><i class="fa-brands fa-whatsapp"></i></a>
+
             </div>
-            <a href="https://t.me/dheya_alqaderi" class="btn">Hire me</a>
+            <a href="" class="btn">Hire me</a>
         </div>
     </section>
     <script src="script.js"></script>
