delete insta and x

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/dheya-yahya-al-qaderi-ba5a3b260/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/DheyaAlqaderi/"><i class="fa-brands fa-github"></i></a>
-                <a href="https://x.com/DheyaAlqadrei"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.instagram.com/dheyaalqaderi/"><i class="fa-brands fa-instagram"></i></a>
+                <!-- <a href="https://x.com/DheyaAlqadrei"><i class="fa-brands fa-x-twitter"></i></a>    -->
                 <a href="https://t.me/dheya_alqaderi"><i class="fa-brands fa-telegram"></i></a>
                 <a href="https://wa.me/+967771158212"><i class="fa-brands fa-whatsapp"></i></a>
 
